syntax = "proto3";

option csharp_namespace = "ConsoleApp1";

service Customer {
  rpc GetPeople (RequestModel) returns (ReplyModel);
}

message RequestModel {
}

message ReplyModel {
  repeated Person person= 1;
}

message Person {
  int32 id = 1;
  string firstName=2;
  string lastName=3;
  int32 age=4;
}
